# libapp

./: .env.example  Dockerfile  Makefile  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  readme.md
nginx/: nginx.conf
src/apps/coreuser/: admin.py  apps.py
src/apps/coreuser/migrations/: 0001_initial.py
src/apps/users/: apps.py  urls.py
src/core/: urls.py  wsgi.py
src/core/settings/: base.py  development.py  production.py
