[tool.poetry]
name = "libapp"
version = "0.1.0"
description = "library apps"
authors = ["Muchamad Faiz <109614025+muchamadfaiz@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.7"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.1"
psycopg2 = "^2.9.5"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
